# property_finder

backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/bootstrap/: container.py  db.py  logging.py  settings.py
backend/app/contexts/deal_analysis/application/: use_cases.py
backend/app/contexts/deal_analysis/domain/: analyzer.py  models.py
backend/app/contexts/deal_analysis/interfaces/api/: router.py  schemas.py
backend/tests/contract/: test_deal_analysis_endpoint.py
docs/plans/: 2026-03-08-frontend-backend-architecture-design.md
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: rental-analyzer.spec.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/features/analyzer/: AnalyzerPage.tsx  analyzer.css
frontend/src/features/analyzer/fields/: FieldCard.tsx
frontend/src/features/analyzer/model/: defaults.ts  schema.test.ts  schema.ts  types.ts
frontend/src/features/analyzer/results/: AssumptionHealthBadge.tsx  DealScoreGauge.tsx  MetricCard.tsx  ResultsPanel.test.tsx  ResultsPanel.tsx  SummaryRail.tsx
frontend/src/features/analyzer/state/: useAnalyzerStore.ts
frontend/src/features/analyzer/steps/: ExpensesStep.tsx  FinancingStep.tsx  IncomeStep.tsx  PropertyStep.tsx  validationFlow.test.tsx
frontend/src/features/analyzer/wizard/: WizardStepper.test.tsx  WizardStepper.tsx  steps.ts
frontend/src/lib/analysis/: assumptionHealth.ts  calculateMetrics.test.ts  calculateMetrics.ts  scoreDeal.test.ts  scoreDeal.ts
frontend/src/styles/: global.css  tokens.css
