[project]
name = "prop-buyer-backend"
version = "0.1.0"
description = "FastAPI DDD backend for Prop Buyer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1,<0.136.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.13.1,<3.0.0",
    "uvicorn>=0.41.0,<0.42.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<0.29.0",
    "pytest>=9.0.2,<10.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
